<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <description>Demo for ROS with Gazebo</description>
  <version>0.0.0</version>

  <maintainer email="ertugufuk@gmail.com">ertugufuk</maintainer>
    
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>gazebo_ros</depend>

</package>
